syntax = "proto3";

import "google/protobuf/timestamp.proto";

option go_package = "github.com/thomas-marquis/kleo-back/internal/controller/grpc/generated";
option java_package = "fr.scalde.kleo.data.generated";

enum MovmentType {
    BASE_INCOME = 0;
    BASE_EXPENSE = 1;
    BASE_TRANSFER = 2;
    BASE_SAVING = 3;
}

message SubCategory {
    string value = 1;
    MovmentType movment_type = 2;
    string label = 3;
}

message Category {
    string value = 1;
    string label = 2;
    SubCategory sub_category = 3;
    string description = 4;
    string id = 5;
}

message User {
    string id = 1;
    string name = 2;
    string email = 3;
    string is_admin = 4;
}

message Household {
    string id = 1;
    string name = 2;
    repeated User members = 3;
}

message Transaction {
    string id = 1;
    float amount = 2;
    string label = 3;
    google.protobuf.Timestamp date = 4;
    map<string, float> allocations = 5;
    Category category = 6;
}

message ListTransactionsByUserRequest {
    int64 limit = 1;
    int64 offset = 2;
    string user_id = 3;
}

message GetByIdRequest {
    string id = 1;
}

message TransactionsListResponse {
    repeated Transaction transactions = 1;
    bool has_next = 2;
}

message GetUserResponse {
    User user = 1;
}

service KeloAppService {
    rpc ListTransactionsByUser(ListTransactionsByUserRequest) returns (TransactionsListResponse);
    rpc GetUserById(GetByIdRequest) returns (GetUserResponse);
}
